# data-dag

./: .bumpversion.cfg  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docs.yml  docs_gh_pages.yml  pre-commit.yml  pypi.yml  pytest.yml
data_dag/: __init__.py  dag_factory.py  operator_factory.py  utils.py
data_dag/operator_factory/: __init__.py  _utils.py  base.py  dynamic.py  simple.py
docs/: changelog.md  conf.py  getting_started.md  index.md  installation.md  overview.md  requirements.txt
docs/reference/: dag_factory.rst  modules.rst  operator_factory.rst
docs/usage/: dag_factory.md  index.md  operator_factory.md
tests/: test_dag_factory.py  test_dynamic_operator_factory.py  test_operator_factory.py
