[metadata]
version = 0.0.1
name = data_dag
description = Tooling to help build data-driven DAGs
author = Rearc Data
author_email = data@rearc.io

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rearc-data/data_dag

project_urls =
    Bug Tracker = https://github.com/rearc-data/data_dag/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    dacite
    pydantic
    decorator

[options.packages.find]
where = .
